erDiagram
 AnnoScolastico {
  INTEGER annoScolasticoId PK
  TEXT testo
  TEXT inizio
  TEXT fine
 }

 PeriodoValutazione {
  INTEGER periodoValutazioneId PK
  INTEGER annoScolasticoId FK
  TEXT descrizione
  TEXT inizio
  TEXT fine
 }

 Classe {
  INTEGER classeId PK
  INTEGER annoScolasticoId FK
  INTEGER anno
  TEXT sezione
  TEXT indirizzo
  TEXT articolazione
  INTEGER maxGiustificazioni
 }

 Studente {
  INTEGER studenteId PK
  TEXT nome
  TEXT cognome
  TEXT sesso
  TEXT email
 }

 Registro {
  INTEGER studenteId PK
  INTEGER classeId PK
 }

 Ritirato {
  INTEGER studenteId PK
  INTEGER classeId PK
  TEXT data PK
 }

 Argomento {
  INTEGER argomentoId PK
  TEXT argomento
 }

 Programmazione {
  INTEGER classeId PK
  INTEGER argomentoId PK
 }

 Quesito {
  INTEGER quesitoId PK
  INTEGER argomentoId FK
  TEXT quesito
 }

 Assenza {
  INTEGER studenteId PK
  TEXT data PK
 }

 Giustificazione {
  INTEGER studenteId PK
  TEXT data PK
  INTEGER immotivata
 }

 Griglia {
  INTEGER grigliaId PK
  TEXT descrizione
 }

 PredisposizioneProva {
  INTEGER predisposizioneProvaId PK
  INTEGER classeId FK
  INTEGER grigliaId FK
  TEXT descrizione
  TEXT data
  INTEGER numeroQuesiti
 }

 ArgomentiProva {
  INTEGER predisposizioneProvaId PK
  INTEGER argomentoId PK
  INTEGER numeroQuesiti
  INTEGER probabilita
 }

 Indicatore {
  INTEGER indicatoreId PK
  INTEGER grigliaId FK
  TEXT indicatore
  TEXT descrizione
  REAL peso
 }

 Descrittore {
  INTEGER descrittoreId PK
  INTEGER indicatoreId FK
  TEXT descrittore
  TEXT descrizione
  INTEGER livello
 }

 Prova {
  INTEGER provaId PK
  INTEGER studenteId FK
  INTEGER predisposizioneProvaId FK
  TEXT data
 }

 ValutazioneQuesito {
  INTEGER provaId PK
  INTEGER descrittoreId PK
 }

 Verbale {
  INTEGER provaId PK
  INTEGER quesitoId PK
 }

 Competenza {
  INTEGER competenzaId PK
  TEXT competenza
  INTEGER cittadinanza
 }

 Conoscenza {
  INTEGER conoscenzaId PK
  INTEGER competenzaId FK
  TEXT conoscenza
  INTEGER obiettivoMinino
 }

 Abilita {
  INTEGER abilitaId PK
  INTEGER competenzaId FK
  TEXT abilita
  INTEGER obiettivoMinino
 }

 Traguardo {
  INTEGER argomentoId PK
  INTEGER competenzaId PK
 }

 PeriodoValutazione }o--|| AnnoScolastico : annoScolasticoId
 Classe }o--|| AnnoScolastico : annoScolasticoId
 Registro }o--|| Classe : classeId
 Registro }o--|| Studente : studenteId
 Ritirato }o--|| Registro : studenteId
 Ritirato }o--|| Registro : classeId
 Programmazione }o--|| Argomento : argomentoId
 Programmazione }o--|| Classe : classeId
 Quesito }o--|| Argomento : argomentoId
 Assenza }o--|| Studente : studenteId
 Giustificazione }o--|| Studente : studenteId
 PredisposizioneProva }o--|| Griglia : grigliaId
 PredisposizioneProva }o--|| Classe : classeId
 ArgomentiProva }o--|| Argomento : argomentoId
 ArgomentiProva }o--|| PredisposizioneProva : predisposizioneProvaId
 Indicatore }o--|| Griglia : grigliaId
 Descrittore }o--|| Indicatore : indicatoreId
 Prova }o--|| PredisposizioneProva : predisposizioneProvaId
 Prova }o--|| Studente : studenteId
 ValutazioneQuesito }o--|| Descrittore : descrittoreId
 ValutazioneQuesito }o--|| Prova : provaId
 Verbale }o--|| Quesito : quesitoId
 Verbale }o--|| Prova : provaId
 Conoscenza }o--|| Competenza : competenzaId
 Abilita }o--|| Competenza : competenzaId
 Traguardo }o--|| Competenza : competenzaId
 Traguardo }o--|| Argomento : argomentoId

